update new techniq Hexagonal
